# eygen

./: base.py  logger.py  main.py  plot_base.py  plot_pruning.py  plot_training_runs.py  pyproject.toml  run_base.sh  run_prune_sweep.sh  training_runs.csv  training_runs_base_1.csv  training_runs_base_3.csv  training_runs_test_50_3.csv
spectral/: spectraldense.py  spectralprune.py
